syntax = "proto3";

package cloud.api.workorder.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/VideoCoin/cloud-api/profiles/v1/profiles.proto";

option go_package = "v1";
option (gogoproto.marshaler_all) = false;
option (gogoproto.unmarshaler_all) = false;
option (gogoproto.sizer_all) = false;

enum WorkOrderStatus {
    option (gogoproto.goproto_enum_prefix) = false;
    option (gogoproto.enum_customname) = "WorkOrderStatus";

    none = 0 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusNone" ];
    new = 1 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusNew" ];
    pending_approval = 2 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusPendingApproval" ];
    approved = 3 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusApproved" ];
    work_started = 4 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusWorkStarted" ];
    transcoding = 5 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusTranscoding" ];
    canceld = 6 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusCanceled" ];
    failed = 7 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusFailed" ];
    completed = 8 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusCompleted" ];
    ready = 9 [ (gogoproto.enumvalue_customname) = "WorkOrderStatusReady" ];
}

enum IngestStatus {
    option (gogoproto.goproto_enum_prefix) = false;
    option (gogoproto.enum_customname) = "IngestStatus";

    ingest_status_none = 0 [ (gogoproto.enumvalue_customname) = "IngestStatusNone" ];
    ingest_status_active = 1 [ (gogoproto.enumvalue_customname) = "IngestStatusActive" ];
    ingest_status_inactive = 2 [ (gogoproto.enumvalue_customname) = "IngestStatusInactive" ];
    ingest_status_error = 3 [ (gogoproto.enumvalue_customname) = "IngestStatusError" ];
}




message WorkOrder {
    uint32 id = 1;
    string transcoder_id = 2;
    string contract_address = 3;
    string wallet_address = 4;
    int64 stream_id = 7;
    string input_url = 9;
    string output_url =10;
    string status = 11;
    bytes chunks = 12 [ (gogoproto.moretags) = "gorm:\"chunks;type:json\"sql:\"type:json\"" ];
    int64 created_at = 13;
    int64 updated_at = 14;
    bytes worker = 15 [ (gogoproto.moretags) = "gorm:\"worker;type:binary(32);DEFAULT:NULL\"sql:\"type:binary(32);DEFAULT:null\"" ];
    float max_work = 16;
    float min_work = 17;
    float actual_work = 18;
    cloud.api.profiles.v1.ProfileId profile_id = 19;
    bool refunded = 20;
    IngestStatus ingest_status = 21;
}

